# TrapperScript

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  edit.py  pyproject.toml  requirements.txt  stage.py  vercel.json
.github/workflows/: update.yml
script/: main.js  update.py
src/: app.py  internet.py  local.py  stage.py
src/templates/: trapper.jinja2
stage/: internet.py  local.py  utils.py
stage/templates/: trapper.jinja2
templates/: trapper.jinja2
