[project]
name = "trapper-script"
version = "0.4.0"
description = ""
authors = [
    {name = "GuGuMur", email = "2221533105@qq.com"},
]
dependencies = [
    "mwbot>=1.0.30",
    "mwparserfromhell>=0.6.5",
    "httpx>=0.25.2",
    "jinja2>=3.1.2",
    "loguru>=0.7.2",
    "python-multipart>=0.0.6",
    "fastapi==0.95.2",
    "uvicorn[standard]==0.22.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
