[project]
name = "trapper-script"
version = "0.4.0"
description = ""
authors = [
    {name = "GuGuMur", email = "2221533105@qq.com"},
]
dependencies = [
    "mwbot>=1.0.35",
    "mwparserfromhell>=0.6.6",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
